compiler/tools/fpp-check/test/tlm_channel/format_not_numeric.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/tlm_channel/format_not_numeric.fpp: 3.28
  telemetry T: bool format "{x}"
                           ^
error: invalid format string: bool is not an integer type
